# str

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
str/: CMakeLists.txt  main.cpp
